# hashtastic

./: .gitignore  CLI.c++  CMakeLists.txt  LICENSE  RyCipher.hpp  RyHash.h++  RyHash.hpp  RyHash.ixx  command_line.cpp  evilDictionary.c++  main.cpp
src/: CMakeLists.txt  Hashes.cpp  RyHash.h++  hashes.csv  main.cpp  runner  screenlog.0  screenlog.1  smasher
